AC_PREREQ(2.53)

AC_INIT(src/main.cpp)
#AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADERS([src/config.h])
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE(dejavu,0.0)

dnl we don't want the stupid autoconf default -g -O2 (makes debugging harder)
test ".$CXXFLAGS" = "." && CXXFLAGS=" "

AC_PROG_CXX
#AC_PROG_RANLIB
AC_PROG_LIBTOOL

dnl 
dnl our flags
dnl 
CXXFLAGS="$CXXFLAGS -ffast-math -Wall -W -Wcast-align -Wshadow -Wundef"

dnl 
dnl --enable-debug
dnl 
AC_ARG_ENABLE(debug,   [  --enable-debug        enable debug])
AC_MSG_CHECKING(for debug)
AC_MSG_RESULT($enable_debug)
if test x$enable_debug = xyes; then
	CXXFLAGS="$CXXFLAGS -g -ggdb -fno-inline -O0"
fi

dnl 
dnl --enable-prof
dnl 
AC_ARG_ENABLE(prof,    [  --enable-prof         enable profiling])
AC_MSG_CHECKING(for profiling)
AC_MSG_RESULT($enable_prof)
if test x$enable_prof = xyes; then
	CXX_FLAGS="$CXXFLAGS -pg"
	LDFLAGS=" -pg"
fi

dnl
dnl check of ccache
dnl 
AC_PATH_PROG(CCACHE, ccache)
if test "$CCACHE" ; then
	CXX="ccache $CXX"
fi

dnl 
dnl lua
dnl 
AC_MSG_CHECKING(for lua-config)
AC_PATH_PROGS(LUA_CONFIG, [lua-config50 lua-config])
if test x$LUA_CONFIG != "x"; then
	LUA_CFLAGS=`$LUA_CONFIG --include`
	LUA_LIBS=`$LUA_CONFIG --static`
else
	AC_MSG_ERROR([liblua required. Aborting.])
fi
AC_SUBST(LUA_LIBS)
AC_SUBST(LUA_CFLAGS)
CXXFLAGS="$CXXFLAGS $LUA_CFLAGS"
LIBS="$LIBS $LUA_LIBS"

dnl
dnl luabind
dnl
AC_SEARCH_LIBS([_ZN7luabind5scopeC1Ev], luabind)
LIBS="$LIBS -lluabind"
AC_CHECK_HEADERS([luabind/luabind.hpp])

dnl
dnl gosu
dnl
AC_MSG_CHECKING(for gosu)
AC_PATH_PROG(GOSU_CONFIG, gosu-config)
if test x$GOSU_CONFIG != "x"; then
	GOSU_CXXFLAGS="`$GOSU_CONFIG --cxxflags`"
	GOSU_LIBS="-lgosu `$GOSU_CONFIG --libs`"
else
	AC_MSG_ERROR([libgosu required. Aborting.])
fi
AC_SUBST(GOSU_LIBS)
AC_SUBST(GOSU_CFLAGS)
CXXFLAGS="$CXXFLAGS $GOSU_CXXFLAGS"
LIBS="$LIBS $GOSU_LIBS"

AC_CONFIG_FILES([
	Makefile 
	src/Makefile 
	])
AC_OUTPUT
